Updated info for jobs, added scrolling on jobs page

--- a/index.html
+++ b/index.html
@@ -62,10 +62,8 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<p class="largeText">Autonomous Systems Laboratory</p>
 								<p class="smallText">Robotics and Development Engineer at Swiss Federal Institute of Technology</p>
 								<p class="smallText">March 2016 to September 2016</p>
-								<p class="mediumText">Developed ROS driver to interface with an ABB YuMi robot.
-									Developed an interface between the YuMi robot and a robot manipulation software
-									called MoveIt! in C++, along with interfacing YuMi with the leap motion
-									sensor. All contributions are public on GitHub.</p>
+								<p class="mediumText">Interfaced YuMi with the MoveIt! software in ROS C++ to automate the 
+									kinematic and dynamic model and to integrate existing algorithms for path planning and controls. Integrated the Leap Motion sensor with YuMi in C++ for interactive manipulation. Worked with machine shop to develop a stand and a new attachment for YuMi. Presented work to the President of ABB Switzerland and his colleagues. All contributions are public on GitHub.</p>
 							</div>
 							<div class="linksBar">
 								<a href="http://www.asl.ethz.ch/" target="_blank">
@@ -88,10 +86,8 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<p class="largeText">Production Technology West</p>
 								<p class="smallText">Research Engineer at University West (Hogskolan Vast)</p>
 								<p class="smallText">September 2014 to March 2015</p>
-								<p class="mediumText">Developed algorithms to charaterize defects within 
-									welds and automaticlly find them within image sequences. Also developed 
-									a boroscope for an IR camera to allow the camera to take images in small 
-									confined spaces.</p>
+								<p class="mediumText">Developed algorithms to determine robustness of weld defect detection from
+									an IR camera with various light sources. Built a GUI in MATLAB to interface with algorithms to display defect locations to user. Developed tests to image defects on welds using an IR camera with various light sources in order to benchmark the defect detection algorithms. Designed and built a borescope for an IR camera to image welds inside of vanes.</p>
 							</div>
 							<div class="linksBar">
 								<a href="http://www.hv.se/en/production-technology-west" target="_blank">
@@ -102,6 +98,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 								</a>
 							</div>
 						</div>
+						<div class="bottomSpacer"></div>
 					</div>
 				</div>
 			</section>
@@ -120,7 +117,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<p class="smallText">June 2015 to Present</p>
 								<p class="mediumText">Primarily involved in determining team direction and 
 									facilitated sponsorships. Developed the original organizational structure,
-									Interfaced between university advisors, university staff, and sponsors. 
+									interfaced between university advisors, university staff, and sponsors. 
 									Raised over $65,000 as sponsorship head.</p>
 							</div>
 							<div class="linksBar">
@@ -492,7 +489,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon notActive"></div>
 				<div class="footerButton icon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: October 5th, 2016</p>
+				<p id="lastModified">Last Updated: October 28th, 2016</p>
 			</section>
 		<div>
 	</main>
