--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<p class="largeText">Autonomous Systems Laboratory</p>
 								<p class="smallText">Robotics and Development Engineer at Swiss Federal Institute of Technology</p>
 								<p class="smallText">March 2016 to September 2016</p>
-								<p class="mediumText">Interfaced YuMi with the MoveIt! software in ROS C++ to automate the 
-									kinematic and dynamic model and to integrate existing algorithms for path planning and controls. Integrated the Leap Motion sensor with YuMi in C++ for interactive manipulation. Worked with machine shop to develop a stand and a new attachment for YuMi. Presented work to the President of ABB Switzerland and his colleagues. All contributions are public on GitHub.</p>
+								<p class="mediumText">Interfaced ABB YuMi robot with the MoveIt! software in ROS C++ to automate 
+									the kinematic and dynamic model and to integrate existing algorithms for path planning and controls. Integrated the Leap Motion sensor with YuMi in C++ for interactive manipulation. Worked with machine shop to develop a stand and a new attachment for YuMi. Presented work to the President of ABB Switzerland and his colleagues. All contributions are public on GitHub.</p>
 							</div>
 							<div class="linksBar">
 								<a href="http://www.asl.ethz.ch/" target="_blank">
@@ -74,6 +74,12 @@ CONTACT INFO: wachterfreddy@gmail.com
 								</a>
 								<a href="https://www.facebook.com/eth/posts/1262436083767741%3A0" target="_blank">
 									<span class="icon-newspaper"></span>
+								</a>
+								<a href="https://www.youtube.com/watch?v=NM55aS-hmPk" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
+								<a href="https://www.youtube.com/watch?v=iwm0iYtpO94" target="_blank">
+									<span class="icon-youtube"></span>
 								</a>
 							</div>
 						</div>
@@ -489,7 +495,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon notActive"></div>
 				<div class="footerButton icon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: October 28th, 2016</p>
+				<p id="lastModified">Last Updated: November 30th, 2016</p>
 			</section>
 		<div>
 	</main>
