Updated resume and updated Micromouse project

--- a/index.html
+++ b/index.html
@@ -158,6 +158,28 @@ CONTACT INFO: wachterfreddy@gmail.com
 						</div>
 						<div class="project">
 							<div class="projectImage">
+								<div id="project_background_Micromouse" class="background"></div>
+							</div>
+							<p class="projectTitle">Micromouse</p>
+							<div class="projectDescription">
+								<p class="largeText">Micromouse</p>
+								<p class="smallText">Programmer</p>
+								<p class="smallText">June 2016 to Present</p>
+								<p class="mediumText">Working with a mechanical and computer engineer along with 
+									a professor in mechanical engineering to develop a fully custom robot and a 
+									controls system in order to autonomously move the robot through a maze for a 
+									grand prize of $2,000. Developed the simulation of the robot in a maze in 
+									MATLAB as a visualization tool for testing mapping and maze solving algorithms 
+									for optimization of algorithms.</p>
+							</div>
+							<div class="linksBar">
+								<a href="https://github.com/FWachter/Micromouse" target="_blank">
+									<span class="icon-github"></span>
+								</a>
+							</div>
+						</div>
+						<div class="project">
+							<div class="projectImage">
 								<div id="project_background_LIT" class="background"></div>
 							</div>
 							<p class="projectTitle">LIT</p>
@@ -202,26 +224,6 @@ CONTACT INFO: wachterfreddy@gmail.com
 								</a>
 								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/thor---remote-controlled-robot" target="_blank">
 									<span class="icon-info"></span>
-								</a>
-							</div>
-						</div>
-						<div class="project">
-							<div class="projectImage">
-								<div id="project_background_Micromouse" class="background"></div>
-							</div>
-							<p class="projectTitle">Micromouse</p>
-							<div class="projectDescription">
-								<p class="largeText">Micromouse</p>
-								<p class="smallText">Programmer</p>
-								<p class="smallText">June 2016 to Present</p>
-								<p class="mediumText">Developed structure in MATLAB that allows for Micromouse maps
-									to be graphically created by the user. This structure is integrated with the 
-									A* algorithm which can be run on the map in order to determine the shortest 
-									path from the start to end location.</p>
-							</div>
-							<div class="linksBar">
-								<a href="https://github.com/FWachter/Micromouse" target="_blank">
-									<span class="icon-github"></span>
 								</a>
 							</div>
 						</div>
