Updated Micromouse project

--- a/index.html
+++ b/index.html
@@ -163,16 +163,17 @@ CONTACT INFO: wachterfreddy@gmail.com
 							<p class="projectTitle">Micromouse</p>
 							<div class="projectDescription">
 								<p class="largeText">Micromouse</p>
-								<p class="smallText">Programmer</p>
+								<p class="smallText">Algorithm and Simulation Developer</p>
 								<p class="smallText">June 2016 to Present</p>
 								<p class="mediumText">Working with a mechanical and computer engineer along with 
-									a professor in mechanical engineering to develop a fully custom robot and a 
-									controls system in order to autonomously move the robot through a maze for a 
-									grand prize of $2,000. Developed the simulation of the robot in a maze in 
-									MATLAB as a visualization tool for testing mapping and maze solving algorithms 
-									for optimization of algorithms.</p>
+									a professor in mechanical engineering to develop a fully custom robot and 
+									controls system to autonomously move the robot through a maze. Developed 
+									the simulation of the robot in a maze in MATLAB as a visualization tool for testing mapping and maze solving algorithms for optimization of algorithms and translated algorithm to C++.</p>
 							</div>
 							<div class="linksBar">
+								<a href="https://www.youtube.com/watch?v=W23ovwPaJdQ" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
 								<a href="https://github.com/FWachter/Micromouse" target="_blank">
 									<span class="icon-github"></span>
 								</a>
@@ -497,7 +498,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon notActive"></div>
 				<div class="footerButton icon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: December 16th, 2016</p>
+				<p id="lastModified">Last Updated: January 8th, 2017</p>
 			</section>
 		<div>
 	</main>
