Modified formatting to be easier to read text, added updated resume

--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon footerIcon notActive"></div>
 				<div class="footerButton icon footerIcon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: July 2nd, 2017</p>
+				<p id="lastModified">Last Updated: July 28th, 2017</p>
 			</section>
 		<div>
 	</main>
