Minor design changes, edited about me section

--- a/index.html
+++ b/index.html
@@ -57,15 +57,14 @@ CONTACT INFO: wachterfreddy@gmail.com
 						<div class="spacer"></div>
 						<div id="aboutMeDescription" class="black_out">
 							<p class="pageTitle">About Me</p>
-							<p class="pageText" style="text-align:left;">My name is Frederick Wachter and I am currently a Junior at Drexel University as part of the BS/MS Mechanical Engineering program and will be graduating in June 2018. Post-graduation I will be looking for a work placement in field of robotics or will continue my education by doing starting a Master's degree in computer science.</p>
-							<p class="pageText" style="text-align:left;">Most of my professional, academic, and extracurricular activities has been surrounded around platform development for robotics, primarily mobile, aerial, and maritime robots. My background is in the mechanical engineering side of robotics, but in the future I plan to continue my education to get a deeper understanding of the computational and mathematical side of the field through a Master's program in computer science and eventually a PhD in robotics.</p>
-							<p class="pageText" style="text-align:left;">This website provides an overview of various internships, projects, and related activities that I have worked on during my Drexel University.</p> 
-							<p class="pageText" style="text-align:left;"><span style="font-family:HelveticaNeue-CondensedBold;">Please note:</span> All of the projects or related activities that I have worked on or participated in have been extracurricular and I not receive any course credit for them.</p>
+							<p class="pageText" style="text-align:left;">I am a Robotics Engineer with a background in Mechanical Engineering and over a year of professional and academic experience with ROS. I have experience with full-cycle design, integration, and testing for platform development for maritime, aerial, and ground vehicles. Frederick has also has taken multiple leadership roles in teams ranging from 4 to 100 student and professional members along with experience with project management, product development, sponsorship, and website development.</p>
+							<p class="pageText" style="text-align:left;">I am currently finishing my Bachelor's and Master's degree in Mechanical Engineering from Drexel University, and I will graduate in June 2018. I am looking to continue graduate studies upon graduate along with gaining professional expereince from a full-time job in the field of robotics.</p>
+							<p class="pageText" style="text-align:left;">This website provides an overview of various internships, projects, and related activities that I have done during my time Drexel University.</p> 
 						</div>
 						<div class="spacer" style="height:60px;"></div>
 						<div id="aboutMeDescription" class="black_out">
 							<p class="pageTitle">Platforms</p>
-							<p class="pageText" style="text-align:left;">Below is a list of platforms that I have built and worked with during my time at Drexel University along with descriptions and links.
+							<p class="pageText" style="text-align:left;">Below is a list of platforms that I have built and/or worked with during my time at Drexel University along with descriptions and links.
 						</div>
 						<div class="spacer"></div>
 						<div class="platform">
@@ -747,7 +746,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon footerIcon notActive"></div>
 				<div class="footerButton icon footerIcon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: July 28th, 2017</p>
+				<p id="lastModified">Last Updated: August 6th, 2017</p>
 			</section>
 		<div>
 	</main>
