Made sure all links open in new tab

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<p class="mediumText">I built and flew a hexcopter as part of the 2014 ASME Student Design Competition along with another team member who did the design work. We were third place.</p>
 							</div>
 							<div class="linksBar">
-								<a href="https://www.asme.org/events/competitions/student-design-competition">
+								<a href="https://www.asme.org/events/competitions/student-design-competition" target="_blank">
 									<span class="icon-desktop"></span>
 								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/competitions/asme-sdc">
+								<a href="https://sites.google.com/site/fawengineeringportfolio/competitions/asme-sdc" target="_blank">
 									<span class="icon-info"></span>
 								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/competitions/asme-student-design-competition-2015">
+								<a href="https://sites.google.com/site/fawengineeringportfolio/competitions/asme-student-design-competition-2015" target="_blank">
 									<span class="icon-info"></span>
 								</a>
 							</div>
@@ -103,13 +103,13 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://sites.google.com/site/tauruschapter/research/taurus---freshman-engineering-design-iii---2014" target="_blank">
 									<span class="icon-desktop"></span>
 								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/two-dimensional-mobile-robotic-mapping">
+								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/two-dimensional-mobile-robotic-mapping" target="_blank">
 									<span class="icon-info"></span>
 								</a>
-								<a href="http://du2014-grp940-07.blogspot.se/">
+								<a href="http://du2014-grp940-07.blogspot.se/" target="_blank">
 									<span class="icon-blog"></span>
 								</a>
-								<a href="https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnxmYXdlbmdpbmVlcmluZ3BvcnRmb2xpb3xneDo0NzUxOTY5N2EyMTk2ZjAy">
+								<a href="https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnxmYXdlbmdpbmVlcmluZ3BvcnRmb2xpb3xneDo0NzUxOTY5N2EyMTk2ZjAy" target="_blank">
 									<span class="icon-document"></span>
 								</a>
 							</div>
@@ -579,13 +579,13 @@ CONTACT INFO: wachterfreddy@gmail.com
 									at the links below.</p>
 							</div>
 							<div class="linksBar">
-								<a href="https://www.asme.org/events/competitions/student-design-competition">
+								<a href="https://www.asme.org/events/competitions/student-design-competition" target="_blank">
 									<span class="icon-desktop"></span>
 								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/competitions/asme-sdc">
+								<a href="https://sites.google.com/site/fawengineeringportfolio/competitions/asme-sdc" target="_blank">
 									<span class="icon-info"></span>
 								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/competitions/asme-student-design-competition-2015">
+								<a href="https://sites.google.com/site/fawengineeringportfolio/competitions/asme-student-design-competition-2015" target="_blank">
 									<span class="icon-info"></span>
 								</a>
 							</div>
@@ -604,7 +604,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 									GUI. The files for these games can be found at the link below.</p>
 							</div>
 							<div class="linksBar">
-								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/recreating-games-in-matlab">
+								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/recreating-games-in-matlab" target="_blank">
 									<span class="icon-info"></span>
 								</a>
 							</div>
@@ -647,10 +647,10 @@ CONTACT INFO: wachterfreddy@gmail.com
 									which is then presented at the regional competition. I placed 2nd at this competition</p>
 							</div>
 							<div class="linksBar">
-								<a href="http://www.asce.org/mead-student/">
+								<a href="http://www.asce.org/mead-student/" target="_blank">
 									<span class="icon-desktop"></span>
 								</a>
-								<a href="http://drexel.edu/cae/news-events/news/2014/April/2014-4-18%20Concrete%20Canoe%20Mid_Atlantic%20Competition/">
+								<a href="http://drexel.edu/cae/news-events/news/2014/April/2014-4-18%20Concrete%20Canoe%20Mid_Atlantic%20Competition/" target="_blank">
 									<span class="icon-newspaper"></span>
 								</a>
 							</div>
@@ -674,13 +674,13 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://sites.google.com/site/tauruschapter/research/taurus---freshman-engineering-design-iii---2014" target="_blank">
 									<span class="icon-desktop"></span>
 								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/two-dimensional-mobile-robotic-mapping">
+								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/two-dimensional-mobile-robotic-mapping" target="_blank">
 									<span class="icon-info"></span>
 								</a>
-								<a href="http://du2014-grp940-07.blogspot.se/">
+								<a href="http://du2014-grp940-07.blogspot.se/" target="_blank">
 									<span class="icon-blog"></span>
 								</a>
-								<a href="https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnxmYXdlbmdpbmVlcmluZ3BvcnRmb2xpb3xneDo0NzUxOTY5N2EyMTk2ZjAy">
+								<a href="https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnxmYXdlbmdpbmVlcmluZ3BvcnRmb2xpb3xneDo0NzUxOTY5N2EyMTk2ZjAy" target="_blank">
 									<span class="icon-document"></span>
 								</a>
 							</div>
