Added senior design project

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 							<div class="platformDescription">
 								<p class="largeText">Swerve Drive Robot</p>
 								<p class="smallText">Summer 2017 to Spring 2018</p>
-								<p class="mediumText">Performing software development, sensor design and integration, determined electronics, and manufacturing. Working with three other team members.</p>
+								<p class="mediumText">Building a highly nimble, high torque, high load bearing platform that is ROS-enabled with integrated autonomy</p>
 							</div>
 							<div class="linksBar">
 								<a href="https://SwerveRoboticSystems.github.io" target="_blank">
@@ -276,6 +276,12 @@ CONTACT INFO: wachterfreddy@gmail.com
 								</a>
 								<a href="https://github.com/SwerveRoboticSystems" target="_blank">
 									<span class="icon-github"></span>
+								</a>
+								<a href="https://youtu.be/TCdrGQNdn5U" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
+								<a href="https://youtu.be/HTOOJ_suxGk" target="_blank">
+									<span class="icon-youtube"></span>
 								</a>
 							</div>
 						</div>
@@ -360,6 +366,33 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="fullpage"><!-- id="tint3" --> 
 					<div id="contentPage3" class="center">
 						<div class="spacer"></div>
+						<div class="project">
+							<div class="projectImage">
+								<div id="project_background_Swerve" class="background"></div>
+							</div>
+							<p class="blockTitle">Swerve Robotic Platform</p>
+							<div class="projectDescription">
+								<p class="largeText">Swerve Robotic Platform</p>
+								<p class="smallText">Software Developer and Roboticist</p>
+								<p class="smallText">June 2016 to Present</p>
+								<p class="mediumText">Working with three other students on developing a highly nimble, high torque, high load supporting platform that 
+									is ROS-enabled with integrated autonomy targeted for the warehouse optimization and entertainment industry. I am building the software for the platform within the ROS framework, developing simulations in Gazebo, developing state estimation algorithms, and the team project manager.</p>
+							</div>
+							<div class="linksBar">
+								<a href="https://SwerveRoboticSystems.github.io" target="_blank">
+									<span class="icon-desktop"></span>
+								</a>
+								<a href="https://github.com/SwerveRoboticSystems" target="_blank">
+									<span class="icon-github"></span>
+								</a>
+								<a href="https://youtu.be/TCdrGQNdn5U" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
+								<a href="https://youtu.be/HTOOJ_suxGk" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
+							</div>
+						</div>
 						<div class="project">
 							<div class="projectImage">
 								<div id="project_background_Micromouse" class="background"></div>
@@ -746,7 +779,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon footerIcon notActive"></div>
 				<div class="footerButton icon footerIcon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: August 6th, 2017</p>
+				<p id="lastModified">Last Updated: December 7th, 2017</p>
 			</section>
 		<div>
 	</main>
