Added technical details to website and updated resume

--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://youtu.be/HTOOJ_suxGk" target="_blank">
 									<span class="icon-youtube"></span>
 								</a>
+								<a href="https://goo.gl/eoJwDQ" target="_blank">
+									<span class="icon-document"></span>
+								</a>
+								<a href="https://goo.gl/YDX4A2" target="_blank">
+									<span class="icon-document"></span>
+								</a>
 							</div>
 						</div>
 						<div class="platform">
@@ -105,6 +111,15 @@ CONTACT INFO: wachterfreddy@gmail.com
 							<div class="linksBar">
 								<a href="http://www.asme.org/events/competitions/student-design-competition" target="_blank">
 									<span class="icon-desktop"></span>
+								</a>
+								<a href="https://github.com/DrexelASME/sdc_2018" target="_blank">
+									<span class="icon-github"></span>
+								</a>
+								<a href="https://goo.gl/FjhXtH" target="_blank">
+									<span class="icon-document"></span>
+								</a>
+								<a href="https://goo.gl/8HSzVU" target="_blank">
+									<span class="icon-document"></span>
 								</a>
 							</div>
 						</div>
@@ -407,6 +422,12 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://youtu.be/HTOOJ_suxGk" target="_blank">
 									<span class="icon-youtube"></span>
 								</a>
+								<a href="https://goo.gl/eoJwDQ" target="_blank">
+									<span class="icon-document"></span>
+								</a>
+								<a href="https://goo.gl/YDX4A2" target="_blank">
+									<span class="icon-document"></span>
+								</a>
 							</div>
 						</div>
 						<div class="project">
@@ -426,6 +447,15 @@ CONTACT INFO: wachterfreddy@gmail.com
 							<div class="linksBar">
 								<a href="http://www.asme.org/events/competitions/student-design-competition" target="_blank">
 									<span class="icon-desktop"></span>
+								</a>
+								<a href="https://github.com/DrexelASME/sdc_2018" target="_blank">
+									<span class="icon-github"></span>
+								</a>
+								<a href="https://goo.gl/FjhXtH" target="_blank">
+									<span class="icon-document"></span>
+								</a>
+								<a href="https://goo.gl/8HSzVU" target="_blank">
+									<span class="icon-document"></span>
 								</a>
 							</div>
 						</div>
