Added timelapse of ASME SDC wiring to SDC 2018 project

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://goo.gl/8HSzVU" target="_blank">
 									<span class="icon-document"></span>
 								</a>
+								<a href="https://goo.gl/iXbv2U" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
 							</div>
 						</div>
 						<div class="platform">
@@ -456,6 +459,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 								</a>
 								<a href="https://goo.gl/8HSzVU" target="_blank">
 									<span class="icon-document"></span>
+								</a>
+								<a href="https://goo.gl/iXbv2U" target="_blank">
+									<span class="icon-youtube"></span>
 								</a>
 							</div>
 						</div>
