Updated video for soccer robot platform

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://goo.gl/8HSzVU" target="_blank">
 									<span class="icon-document"></span>
 								</a>
-								<a href="https://goo.gl/iXbv2U" target="_blank">
+								<a href="https://goo.gl/kx8E9a" target="_blank">
 									<span class="icon-youtube"></span>
 								</a>
 							</div>
@@ -460,7 +460,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://goo.gl/8HSzVU" target="_blank">
 									<span class="icon-document"></span>
 								</a>
-								<a href="https://goo.gl/iXbv2U" target="_blank">
+								<a href="https://goo.gl/kx8E9a" target="_blank">
 									<span class="icon-youtube"></span>
 								</a>
 							</div>
