--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="http://www.asme.org/events/competitions/student-design-competition" target="_blank">
 									<span class="icon-desktop"></span>
 								</a>
-								<a href="https://github.com/DrexelASME/sdc_2018" target="_blank">
+								<a href="https://github.com/DrexelASME/sdc_2018/tree/dev" target="_blank">
 									<span class="icon-github"></span>
 								</a>
 								<a href="https://goo.gl/FjhXtH" target="_blank">
@@ -451,7 +451,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="http://www.asme.org/events/competitions/student-design-competition" target="_blank">
 									<span class="icon-desktop"></span>
 								</a>
-								<a href="https://github.com/DrexelASME/sdc_2018" target="_blank">
+								<a href="https://github.com/DrexelASME/sdc_2018/tree/dev" target="_blank">
 									<span class="icon-github"></span>
 								</a>
 								<a href="https://goo.gl/FjhXtH" target="_blank">
