Update SDC project information

--- a/index.html
+++ b/index.html
@@ -106,14 +106,20 @@ CONTACT INFO: wachterfreddy@gmail.com
 							<div class="platformDescription">
 								<p class="largeText">Soccer Robot Team</p>
 								<p class="smallText">Fall 2017 to Spring 2018</p>
-								<p class="mediumText">Designing and building a team of three soccer playing robots to compete in the ASME 2018 Student Design comptition</p>
+								<p class="mediumText">Designed and built a team of three soccer playing robots to compete in the ASME 2018 Student Design comptition</p>
 							</div>
 							<div class="linksBar">
-								<a href="http://www.asme.org/events/competitions/student-design-competition" target="_blank">
+								<a href="https://drexelasme.github.io/sdc_2018/html/index.html" target="_blank">
 									<span class="icon-desktop"></span>
 								</a>
 								<a href="https://github.com/DrexelASME/sdc_2018/tree/dev" target="_blank">
 									<span class="icon-github"></span>
+								</a>
+								<a href="https://www.instagram.com/p/BhmZq6ijH-M/?taken-by=freddywa" target="_blank">
+									<span class="icon-video"></span>
+								</a>
+								<a href="http://www.asme.org/events/competitions/student-design-competition" target="_blank">
+									<span class="icon-document"></span>
 								</a>
 								<a href="https://goo.gl/FjhXtH" target="_blank">
 									<span class="icon-document"></span>
@@ -442,17 +448,23 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<p class="largeText">Soccer Robots</p>
 								<p class="smallText">Project Manager and Software Developer</p>
 								<p class="smallText">Fall 2017 to Spring 2018</p>
-								<p class="mediumText">Designing and building a team of three soccer playing robots to 
-									compete in the ASME 2018 Student Design Comptition. Holding workshops to show the 
-									other team members the process of robot development from design, programming, 
-									manufacturing, integration, and testing.</p>
+								<p class="mediumText">Designed and built a team of three soccer playing robots to 
+									compete in the ASME 2018 Student Design Comptition hosted at Penn State on April 
+									14th, 2018. Held workshops to show the other team members the process of robot 
+									development from design, programming, manufacturing, integration, and testing.</p>
 							</div>
 							<div class="linksBar">
-								<a href="http://www.asme.org/events/competitions/student-design-competition" target="_blank">
+								<a href="https://drexelasme.github.io/sdc_2018/html/index.html" target="_blank">
 									<span class="icon-desktop"></span>
 								</a>
 								<a href="https://github.com/DrexelASME/sdc_2018/tree/dev" target="_blank">
 									<span class="icon-github"></span>
+								</a>
+								<a href="https://www.instagram.com/p/BhmZq6ijH-M/?taken-by=freddywa" target="_blank">
+									<span class="icon-video"></span>
+								</a>
+								<a href="http://www.asme.org/events/competitions/student-design-competition" target="_blank">
+									<span class="icon-document"></span>
 								</a>
 								<a href="https://goo.gl/FjhXtH" target="_blank">
 									<span class="icon-document"></span>
