Update links for Swerve and THOR

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://github.com/SwerveRoboticSystems" target="_blank">
 									<span class="icon-github"></span>
 								</a>
+								<a href="https://www.instagram.com/SwerveRoboticSystems/" target="_blank">
+									<span class="icon-instagram"></span>
+								</a>
 								<a href="https://youtu.be/TCdrGQNdn5U" target="_blank">
 									<span class="icon-youtube"></span>
 								</a>
@@ -118,8 +121,8 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://www.instagram.com/p/BhmZq6ijH-M/?taken-by=freddywa" target="_blank">
 									<span class="icon-video"></span>
 								</a>
-								<a href="http://www.asme.org/events/competitions/student-design-competition" target="_blank">
-									<span class="icon-document"></span>
+								<a href="https://goo.gl/cCEvn5" target="_blank">
+									<span class="icon-newspaper"></span>
 								</a>
 								<a href="https://goo.gl/FjhXtH" target="_blank">
 									<span class="icon-document"></span>
@@ -425,6 +428,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://github.com/SwerveRoboticSystems" target="_blank">
 									<span class="icon-github"></span>
 								</a>
+								<a href="https://www.instagram.com/SwerveRoboticSystems/" target="_blank">
+									<span class="icon-instagram"></span>
+								</a>
 								<a href="https://youtu.be/TCdrGQNdn5U" target="_blank">
 									<span class="icon-youtube"></span>
 								</a>
@@ -465,6 +471,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 								</a>
 								<a href="http://www.asme.org/events/competitions/student-design-competition" target="_blank">
 									<span class="icon-document"></span>
+								</a>
+								<a href="https://goo.gl/cCEvn5" target="_blank">
+									<span class="icon-newspaper"></span>
 								</a>
 								<a href="https://goo.gl/FjhXtH" target="_blank">
 									<span class="icon-document"></span>
@@ -865,7 +874,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon footerIcon notActive"></div>
 				<div class="footerButton icon footerIcon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: February 24th, 2018</p>
+				<p id="lastModified">Last Updated: April 27th, 2018</p>
 			</section>
 		<div>
 	</main>
