Updated resume and project links

--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://www.instagram.com/SwerveRoboticSystems/" target="_blank">
 									<span class="icon-instagram"></span>
 								</a>
-								<a href="https://youtu.be/TCdrGQNdn5U" target="_blank">
+								<a href="https://youtu.be/xm55puX2-84" target="_blank">
 									<span class="icon-youtube"></span>
 								</a>
-								<a href="https://youtu.be/HTOOJ_suxGk" target="_blank">
+								<a href="https://youtu.be/1aeKGklYcik" target="_blank">
 									<span class="icon-youtube"></span>
 								</a>
-								<a href="https://goo.gl/eoJwDQ" target="_blank">
+								<a href="https://swerveroboticsystems.github.io/Report/Condensed" target="_blank">
 									<span class="icon-document"></span>
 								</a>
-								<a href="https://goo.gl/YDX4A2" target="_blank">
+								<a href="https://goo.gl/eoJwDQ" target="_blank">
 									<span class="icon-document"></span>
 								</a>
 							</div>
@@ -121,14 +121,11 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://www.instagram.com/p/BhmZq6ijH-M/?taken-by=freddywa" target="_blank">
 									<span class="icon-video"></span>
 								</a>
+								<a href="https://goo.gl/8sp55F" target="_blank">
+									<span class="icon-document"></span>
+								</a>
 								<a href="https://goo.gl/cCEvn5" target="_blank">
 									<span class="icon-newspaper"></span>
-								</a>
-								<a href="https://goo.gl/FjhXtH" target="_blank">
-									<span class="icon-document"></span>
-								</a>
-								<a href="https://goo.gl/8HSzVU" target="_blank">
-									<span class="icon-document"></span>
 								</a>
 								<a href="https://goo.gl/kx8E9a" target="_blank">
 									<span class="icon-youtube"></span>
@@ -431,16 +428,16 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://www.instagram.com/SwerveRoboticSystems/" target="_blank">
 									<span class="icon-instagram"></span>
 								</a>
-								<a href="https://youtu.be/TCdrGQNdn5U" target="_blank">
+								<a href="https://youtu.be/xm55puX2-84" target="_blank">
 									<span class="icon-youtube"></span>
 								</a>
-								<a href="https://youtu.be/HTOOJ_suxGk" target="_blank">
+								<a href="https://youtu.be/1aeKGklYcik" target="_blank">
 									<span class="icon-youtube"></span>
 								</a>
-								<a href="https://goo.gl/eoJwDQ" target="_blank">
+								<a href="https://swerveroboticsystems.github.io/Report/Condensed" target="_blank">
 									<span class="icon-document"></span>
 								</a>
-								<a href="https://goo.gl/YDX4A2" target="_blank">
+								<a href="https://goo.gl/eoJwDQ" target="_blank">
 									<span class="icon-document"></span>
 								</a>
 							</div>
@@ -469,17 +466,11 @@ CONTACT INFO: wachterfreddy@gmail.com
 								<a href="https://www.instagram.com/p/BhmZq6ijH-M/?taken-by=freddywa" target="_blank">
 									<span class="icon-video"></span>
 								</a>
-								<a href="http://www.asme.org/events/competitions/student-design-competition" target="_blank">
+								<a href="https://goo.gl/8sp55F" target="_blank">
 									<span class="icon-document"></span>
 								</a>
 								<a href="https://goo.gl/cCEvn5" target="_blank">
 									<span class="icon-newspaper"></span>
-								</a>
-								<a href="https://goo.gl/FjhXtH" target="_blank">
-									<span class="icon-document"></span>
-								</a>
-								<a href="https://goo.gl/8HSzVU" target="_blank">
-									<span class="icon-document"></span>
 								</a>
 								<a href="https://goo.gl/kx8E9a" target="_blank">
 									<span class="icon-youtube"></span>
