--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@ CONTACT INFO: wachterfreddy@gmail.com
 						<div class="spacer"></div>
 						<div id="aboutMeDescription" class="black_out">
 							<p class="pageTitle">About Me</p>
-							<p class="pageText" style="text-align:left;">I am a Robotics Engineer with a background in Mechanical Engineering and over a year of professional and academic experience with ROS. I have experience with full-cycle design, integration, and testing for platform development for maritime, aerial, and ground vehicles. Frederick has also has taken multiple leadership roles in teams ranging from 4 to 100 student and professional members along with experience with project management, product development, sponsorship, and website development.</p>
-							<p class="pageText" style="text-align:left;">I am currently finishing my Bachelor's and Master's degree in Mechanical Engineering from Drexel University, and I will graduate in June 2018. I am looking to continue graduate studies upon graduation along with gaining professional expereince from a full-time job in the field of robotics.</p>
-							<p class="pageText" style="text-align:left;">This website provides an overview of various internships, projects, and related activities that I have done during my time Drexel University.</p> 
+							<p class="pageText" style="text-align:left;">I am a Mechanical Engineer with primary interest in robotics, embedded systems, and software development. The majority of my work and project experience has involved combining software and hardware for developing robotic platforms along with developing software for various applications. I also have experience with full-cycle design, integration, and testing of robotic platforms. I have taken multiple leadership roles in teams ranging from 4 to 100 student and professional members have additional experience with project management, product development, sponsorship, and website development.</p>
+							<p class="pageText" style="text-align:left;">I have completed my Bachelor's and Master's degree in Mechanical Engineering from Drexel University in June 2018.</p>
+							<p class="pageText" style="text-align:left;">This website provides an overview of various work experiences, projects, and related activities that I have done since the start of my Bachelor's program.</p> 
 						</div>
 						<div class="spacer" style="height:60px;"></div>
 						<div id="aboutMeDescription" class="black_out">
 							<p class="pageTitle">Platforms</p>
-							<p class="pageText" style="text-align:left;">Below is a list of platforms that I have built and/or worked with during my time at Drexel University along with descriptions and links.
+							<p class="pageText" style="text-align:left;">Below is a list of platforms that I have built and/or worked with since the start of my Bachelor's program along with descriptions and links.
 						</div>
 						<div class="spacer"></div>
 						<div class="platform">
@@ -865,7 +865,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon footerIcon notActive"></div>
 				<div class="footerButton icon footerIcon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: June 13th, 2018</p>
+				<p id="lastModified">Last Updated: July 26th, 2018</p>
 			</section>
 		<div>
 	</main>
